--- a/src/app/business/serarea/serarea-sernum/serarea-sernum.component.html
+++ b/src/app/business/serarea/serarea-sernum/serarea-sernum.component.html
@@ -168,75 +168,75 @@
     </p-footer>
   </p-dialog>
   <!--修改弹框-->
-  <!--<p-dialog header="修改信息" [(visible)]="revampDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="300">
+  <p-dialog header="增加信息" [(visible)]="revampDialog" [responsive]="true" showEffect="fade" blockScroll="true" [modal]="true" [width]="900">
     <div class="ui-g ui-fluid">
-      &lt;!&ndash;所属公司&ndash;&gt;
+      <!--所属公司-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="addorganizationName">所属公司：</label>
+          <label for="addorganizationName1">所属公司：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addorganizationName" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属公司..."></p-dropdown>
+          <p-dropdown id="addorganizationName1" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属公司..."></p-dropdown>
         </div>
       </div>
-      &lt;!&ndash;所属部门&ndash;&gt;
+      <!--所属部门-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="adddeptName">所属部门：</label>
+          <label for="adddeptName1">所属部门：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="adddeptName" [options]="addDepSelect" (onChange)="orgsChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
+          <p-dropdown id="adddeptName1" [options]="addDepSelect" (onChange)="orgsChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
         </div>
       </div>
-      &lt;!&ndash;区划&ndash;&gt;
+      <!--区划-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="addAreaName">所属区划：</label>
+          <label for="addAreaName1">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName" placeholder="请选择所属区划..." (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label"/>
+          <input pInputText id="addAreaName1" placeholder="请选择所属区划..." (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label"/>
         </div>
       </div>
-      &lt;!&ndash;创建人&ndash;&gt;
+      <!--创建人-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="chiefName">创建人：</label>
+          <label for="chiefName1">创建人：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="chiefName" placeholder="请选择创建人..." (click)="userTreeClick()" [(ngModel)]="addUserTree.label"/>
+          <input pInputText id="chiefName1" placeholder="请选择创建人..." (click)="userTreeClick()" [(ngModel)]="addUserTree.label"/>
         </div>
       </div>
-      &lt;!&ndash;创建人电话&ndash;&gt;
+      <!--创建人电话-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="chiefPhone">创建人：</label>
+          <label for="chiefPhone1">创建人：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="chiefPhone" disabled placeholder="请添加创建人电话..." [(ngModel)]="addUserTree.areaCode"/>
+          <input pInputText id="chiefPhone1" disabled placeholder="请添加创建人电话..." [(ngModel)]="addUserTree.areaCode"/>
         </div>
       </div>
-      &lt;!&ndash;服务区名称&ndash;&gt;
+      <!--服务区名称-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="serviceAreaName">服务区名称：</label>
+          <label for="serviceAreaName1">服务区名称：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="serviceAreaName" placeholder="请输入服务区名称..." [(ngModel)]="addSerarea.serviceAreaName"/>
+          <input pInputText id="serviceAreaName1" placeholder="请输入服务区名称..." [(ngModel)]="addSerarea.serviceAreaName"/>
         </div>
       </div>
-      &lt;!&ndash;————————————公共属性————————————&ndash;&gt;
+      <!--————————————公共属性————————————-->
       <div class="ui-g-12" style="border-bottom: 2px dotted black">
         <h4 class="text-center">公共属性</h4>
       </div>
       <div class="ui-g-6" *ngFor="let item of commonAttributeValues;let i = index">
         <div class="ui-g-4">
-          <label for="longitude">{{item.attributeName}}：</label>
+          <label for="longitude1">{{item.attributeName}}：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="longitude" [placeholder]="'请输入'+item.attributeName+'...'" [(ngModel)]="item.value"/>
+          <input pInputText id="longitude1" [placeholder]="'请输入'+item.attributeName+'...'" [(ngModel)]="item.value"/>
         </div>
       </div>
-      &lt;!&ndash;————————————上行属性————————————&ndash;&gt;
+      <!--————————————上行属性————————————-->
       <div class="ui-g-12" style="border-bottom: 2px dotted black">
         <h4 class="text-center">上行属性</h4>
       </div>
@@ -267,7 +267,7 @@
           <button pButton type="button" label="删除" (click)="upAttributeDelete(i)" class="ui-button-raised ui-button-danger"></button>
         </div>
       </div>
-      &lt;!&ndash;————————————下行属性————————————&ndash;&gt;
+      <!--————————————下行属性————————————-->
       <div class="ui-g-12" style="border-bottom: 2px dotted black">
         <h4 class="text-center">下行属性</h4>
       </div>
@@ -298,13 +298,14 @@
           <button pButton type="button" label="删除" (click)="downAttributeDelete(i)" class="ui-button-raised ui-button-danger"></button>
         </div>
       </div>
+    </div>
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
-        <button class="btn btn-success" type="button" (click)="revampSave()">保存</button>
+        <button class="btn btn-success" type="button" (click)="revampSave()">确认</button>
         <button class="btn btn-warning" type="button" (click)="revampDialog=false">取消</button>
       </div>
     </p-footer>
-  </p-dialog>-->
+  </p-dialog>
   <!--区域树弹框-->
   <p-dialog header="请选择区域" [(visible)]="areaDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
     <div class="ui-g ui-fluid">
