--- a/src/app/business/dict/dict-list/dict-list.component.html
+++ b/src/app/business/dict/dict-list/dict-list.component.html
@@ -9,6 +9,7 @@
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
+    <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
   <!--数据-->
   <p-table [columns]="cols" [value]="dictLists" selectionMode="multiple" [(selection)]="selectedDictLists" (onRowSelect)="onRowSelect($event)">
@@ -53,6 +54,36 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="addsSave()">保存</button>
         <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
+  <!--修改弹框-->
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800" >
+    <div class="ui-g ui-fluid">
+      <!--字典编码-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="dictionaryCode1">字典编码：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="dictionaryCode1" [(ngModel)]="modifyDictList.dictionaryCode" ([value])="this.modifyDictList.dictionaryCode"/>
+        </div>
+      </div>
+      <!--字典名称-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="dictionaryName1">字典名称：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="dictionaryName1" [(ngModel)]="modifyDictList.dictionaryName"([value])="this.modifyDictList.dictionaryCode"/>
+        </div>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
