--- a/src/app/business/videom/videom.component.html
+++ b/src/app/business/videom/videom.component.html
@@ -29,7 +29,7 @@
     </ng-template>
   </p-table>
   <!--增加弹框-->
-  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800" (onHide)="clearDown()">
     <div class="ui-g ui-fluid">
       <!--区划-->
       <div class="ui-g-6">
@@ -147,7 +147,7 @@
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="addsSave()">保存</button>
-        <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+        <button class="btn btn-warning" type="button" (click)="addDialog=false;clearDown()">取消</button>
       </div>
     </p-footer>
   </p-dialog>
@@ -175,7 +175,7 @@
     </p-footer>
   </p-dialog>
   <!--修改弹框-->
-  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800" (onHide)="clearDown()">
     <div class="ui-g ui-fluid">
       <!--区划-->
       <div class="ui-g-6">
@@ -284,7 +284,7 @@
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="modifySure()">修改</button>
-        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false;clearDown()">取消</button>
       </div>
     </p-footer>
   </p-dialog>
