--- a/src/app/business/cash/cash.component.html
+++ b/src/app/business/cash/cash.component.html
@@ -4,7 +4,7 @@
 <!--确认弹窗-->
 <p-confirmDialog acceptLabel="确认" rejectLabel="取消"></p-confirmDialog>
 <div class="video-manage">
-  <h4 class="text-center">收银机管理</h4>
+  <h1 class="text-center">收银机管理</h1>
   <!--按钮-->
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
@@ -261,6 +261,7 @@
       </div>
     </p-footer>
   </p-dialog>
+  <app-paging [option]="option" (pageClick)="nowpageEventHandle($event)"></app-paging>
 </div>
 
 
