--- a/src/app/business/dict/dict-word/dict-word.component.html
+++ b/src/app/business/dict/dict-word/dict-word.component.html
@@ -4,7 +4,7 @@
 <p-confirmDialog acceptLabel="确认" rejectLabel="取消"></p-confirmDialog>
 <app-s-loation locationTitle="字典词条"></app-s-loation>
 <div class="serarea-manage">
-  <h4 class="text-center">字典词条</h4>
+  <h1 class="text-center">字典词条</h1>
   <!--按钮-->
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
@@ -121,4 +121,5 @@
       </div>
     </p-footer>
   </p-dialog>
+  <app-paging [option]="option1" (pageClick)="nowpageEventHandle($event)"></app-paging>
 </div>
