--- a/src/app/business/serarea/serarea-fieldtype/serarea-fieldtype.component.html
+++ b/src/app/business/serarea/serarea-fieldtype/serarea-fieldtype.component.html
@@ -4,7 +4,7 @@
 <p-confirmDialog acceptLabel="确认" rejectLabel="取消"></p-confirmDialog>
 <app-s-loation locationTitle="服务区字段分类管理"></app-s-loation>
 <div class="serarea-manage">
-  <h4 class="text-center">服务区字段分类管理</h4>
+  <h1 class="text-center">服务区字段分类管理</h1>
   <!--按钮-->
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
@@ -85,4 +85,5 @@
       </div>
     </p-footer>
   </p-dialog>
+  <app-paging [option]="option" (pageClick)="nowpageEventHandle($event)"></app-paging>
 </div>
