--- a/src/app/business/system/event-type/event-type.component.html
+++ b/src/app/business/system/event-type/event-type.component.html
@@ -4,7 +4,7 @@
 <!--确认弹窗-->
 <p-confirmDialog acceptLabel="确认" rejectLabel="取消"></p-confirmDialog>
 <!--<div class="user-manage">-->
-  <h4 class="text-center">事件类型管理</h4>
+  <h1 class="text-center">事件类型管理</h1>
   <!--按钮-->
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
@@ -87,3 +87,4 @@
       </div>
     </p-footer>
   </p-dialog>
+<app-paging [option]="option" (pageClick)="nowpageEventHandle($event)"></app-paging>
