--- a/src/app/business/user/user.component.html
+++ b/src/app/business/user/user.component.html
@@ -250,4 +250,5 @@
       </div>
     </p-footer>
   </p-dialog>
+  <app-paging [option]="option" (pageClick)="nowpageEventHandle($event)"></app-paging>
 </div>
