bug修复： （1）修复打包错误

--- a/src/app/business/user/user.component.html
+++ b/src/app/business/user/user.component.html
@@ -246,7 +246,7 @@
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
-        <button class="btn btn-warning" type="button" (click)="modifyUser=false">取消</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog = false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
