--- a/src/app/business/area/area.component.html
+++ b/src/app/business/area/area.component.html
@@ -20,24 +20,26 @@
       </div>
     </div>-->
   </div>
-  <!--table数据-->
-  <p-treeTable [value]="areas" [columns]="cols" selectionMode="multiple" [(selection)]="selectAreas" (onNodeSelect)="onNodeSelect($event)">
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngFor="let col of columns">
-          {{col.header}}
-        </th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowNode let-rowData="rowData" let-columns="columns">
-      <tr [ttSelectableRow]="rowNode">
-        <td *ngFor="let col of columns; let i = index">
-          <p-treeTableToggler [rowNode]="rowNode" *ngIf="i == 0"></p-treeTableToggler>
-          {{rowData[col.field]}}
-        </td>
-      </tr>
-    </ng-template>
-  </p-treeTable>
+  <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
+    <!--table数据-->
+    <p-treeTable [value]="areas" [columns]="cols" selectionMode="multiple" [(selection)]="selectAreas" (onNodeSelect)="onNodeSelect($event)">
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns">
+            {{col.header}}
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowNode let-rowData="rowData" let-columns="columns">
+        <tr [ttSelectableRow]="rowNode">
+          <td *ngFor="let col of columns; let i = index">
+            <p-treeTableToggler [rowNode]="rowNode" *ngIf="i == 0"></p-treeTableToggler>
+            {{rowData[col.field]}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-treeTable>
+  </p-scrollPanel>
   <!--增加弹框-->
   <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
     <div class="ui-g ui-fluid">
