--- a/src/app/business/cash/cash.component.html
+++ b/src/app/business/cash/cash.component.html
@@ -11,23 +11,25 @@
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
-  <!--数据-->
-  <p-table [columns]="cols" [value]="cashs" selectionMode="multiple" [(selection)]="selectedCashs" (onRowSelect)="onRowSelect($event)">
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngFor="let col of columns">
-          {{col.header}}
-        </th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-      <tr [pSelectableRow]="rowData">
-        <td *ngFor="let col of columns">
-          {{rowData[col.field]}}
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <p-scrollPanel [style]="{width: 'auto', height: '50vh'}">
+    <!--数据-->
+    <p-table [columns]="cols" [value]="cashs" selectionMode="multiple" [(selection)]="selectedCashs" (onRowSelect)="onRowSelect($event)">
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns">
+            {{col.header}}
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+          <td *ngFor="let col of columns">
+            {{rowData[col.field]}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-scrollPanel>
   <!--增加弹框-->
   <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800" (onHide)="clearDown()">
     <div class="ui-g ui-fluid">
@@ -214,7 +216,7 @@
           <label for="addAreaName1">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyCash.province.administrativeAreaName" [value]="this.modifyCash.province.administrativeAreaName" />
         </div>
       </div>
       <!--所属服务区-->
@@ -223,7 +225,7 @@
           <label >所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+          <p-dropdown [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyCash.serviceArea.serviceAreaName"></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -232,7 +234,7 @@
           <label >上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+          <p-dropdown [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
         </div>
       </div>
       <!--所属店铺-->
@@ -241,7 +243,7 @@
           <label >所属店铺：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="storeList" (onChange)="storeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择店铺..."></p-dropdown>
+          <p-dropdown [options]="storeList" (onChange)="storeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyCash.store.storeName"></p-dropdown>
         </div>
       </div>
       <!--收银机编号-->
